Fix issue with overflowing over footer adn beyond

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     font-family: 'Roboto', sans-serif;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 90px 90vh 60px; 
+    grid-template-rows: 90px 100%; 
     min-height: 100vh;
     color: black;
 }
